Fix images on mobile that overflow the container

--- a/web/themes/custom/franzzy78_theme/css/main.css
+++ b/web/themes/custom/franzzy78_theme/css/main.css
@@ -151,6 +151,11 @@ a:hover {
 
 .page-content {
 	padding: 60px;
+        
+        img {
+          max-width: 100%;
+          height: auto;
+        }
 }
 
 .main-content {
